# garmin

./: .gitignore  README.md
.github/workflows/: deploy.yml  sync.yml
backend/: .dockerignore  .env.example  Dockerfile  MCP.md  pyproject.toml
backend/garmin_dash/: __init__.py  app.py  client.py  db.py  export.py  login.py  mcp_server.py  push.py  queries.py  sync.py  token_dump.py
deploy/: .env.example  Caddyfile  IONOS.md  README.md  docker-compose.yml  garmin-sync.service  garmin-sync.timer
frontend/: next.config.ts  package-lock.json
frontend/src/app/: layout.tsx
frontend/src/components/: Card.tsx  Dashboard.tsx  Export.tsx  Login.tsx  Settings.tsx  charts.tsx
frontend/src/lib/: api.ts  csv.ts  format.ts
