[project]
name = "garmin-dash"
version = "0.1.0"
description = "Local Garmin Connect data dashboard backend"
requires-python = ">=3.12"
dependencies = [
    "garminconnect>=0.3.6",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "sqlmodel>=0.0.16",
    "python-dotenv>=1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["garmin_dash"]
